--- a/zjsecurity-demo/src/main/resources/application.properties
+++ b/zjsecurity-demo/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url= jdbc:mysql://127.0.0.1:3306/zjsecurity?useUnicode=yes&cha
 spring.datasource.username = root
 spring.datasource.password = 1053Poj312
 
-spring.session.store-type = none
+# spring.session.store-type = none
 
 server.session.timeout = 600
 
