--- a/zjsecurity-demo/src/main/resources/application.properties
+++ b/zjsecurity-demo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-spring.datasource.url= jdbc:mysql://119.28.78.13:3306/zjsecurity?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3306/zjsecurity?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
 spring.datasource.username = root
-spring.datasource.password = 1053Poj312
+spring.datasource.password = XXX
 
 # spring.session.store-type = none
 
