--- a/zjsecurity-demo/src/main/resources/application.properties
+++ b/zjsecurity-demo/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url= jdbc:mysql://localhost:3306/zjsecurity?useUnicode=yes&cha
 spring.datasource.username = root
 spring.datasource.password = XXX
 
-# spring.session.store-type = none
+spring.session.store-type = none
 
 server.session.timeout = 600
 
